# api/airline.openapi.yaml
@@ -269,6 +269,24 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Route'
+  /routes/{route}:
+    get:
+      operationId: getRoute
+      summary: Get route by IATA codes of origin and destination airports
+      parameters:
+        - name: route
+          in: path
+          required: true
+          schema:
+            type: string
+            pattern: '^[A-Z]{3}-[A-Z]{3}$'
+      responses:
+        '200':
+          description: Route information
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Route'
 
 components:
   schemas:
